WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107842
[BlackBerry] Fix crash in SpellingHandler
https://bugs.webkit.org/show_bug.cgi?id=107842
Summary
[BlackBerry] Fix crash in SpellingHandler
Nima Ghanavatian
Reported
2013-01-24 10:39:23 PST
ssia
Attachments
Patch
(3.20 KB, patch)
2013-01-24 10:49 PST
,
Nima Ghanavatian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nima Ghanavatian
Comment 1
2013-01-24 10:49:33 PST
Created
attachment 184528
[details]
Patch
Rob Buis
Comment 2
2013-01-24 10:51:19 PST
Comment on
attachment 184528
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2013-01-24 12:36:43 PST
Comment on
attachment 184528
[details]
Patch Clearing flags on attachment: 184528 Committed
r140708
: <
http://trac.webkit.org/changeset/140708
>
WebKit Review Bot
Comment 4
2013-01-24 12:36:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug