[BlackBerry] Fix crash in SpellingHandler https://bugs.webkit.org/show_bug.cgi?id=107842

Reviewed by Rob Buis.

If we have an empty range or one with all spaces, we can simply return 0 instead of
still creating a range. Putting in a null check after trimming to catch this case
which was causing the crash in some DRT tests.

Internally reviewed by Mike Fenton.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::trimWhitespaceFromRange):
* WebKitSupport/SpellingHandler.cpp:
(BlackBerry::WebKit::SpellingHandler::createSpellCheckRequest):


Canonical link: https://commits.webkit.org/126033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140708 268f45cc-cd09-0410-ab3c-d52691b4dbfc