Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp
@@ -524,7 +524,7 @@ PassRefPtr<Range> trimWhitespaceFromRange(PassRefPtr<Range> range)
 PassRefPtr<Range> trimWhitespaceFromRange(VisiblePosition startPosition, VisiblePosition endPosition)
 {
     if (isEmptyRangeOrAllSpaces(startPosition, endPosition))
-        return VisibleSelection(endPosition, endPosition).toNormalizedRange();
+        return 0;
 
     while (isWhitespace(startPosition.characterAfter()))
         startPosition = startPosition.next();
@@ -532,7 +532,7 @@ PassRefPtr<Range> trimWhitespaceFromRange(VisiblePosition startPosition, Visible
     while (isWhitespace(endPosition.characterBefore()))
         endPosition = endPosition.previous();
 
-    return VisibleSelection(startPosition, endPosition).toNormalizedRange();
+    return makeRange(startPosition, endPosition);
 }
 
 bool isEmptyRangeOrAllSpaces(VisiblePosition startPosition, VisiblePosition endPosition)
